Document payment endpoint
